force-app/main/default/objects/Address__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Client__r.First_Name__c  + &apos; &apos; + Client__r.Last_Name__c</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>