force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>TamilNadu</fullName>
            </value>
            <value>
                <fullName>Kolkatta</fullName>
            </value>
            <value>
                <fullName>New SouthWales</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Hobart</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Napier</fullName>
            </value>
            <value>
                <fullName>Christchurch</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
            <value>
                <fullName>Capetown</fullName>
            </value>
            <value>
                <fullName>Johanesburg</fullName>
            </value>
            <value>
                <fullName>Rawanda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>