force-app/main/default/objects/Address__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <label>Valuation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>