force-app/main/default/objects/Address__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>Address_Line_1__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Records</label>
</ListView>